2.Containers/scripts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-of-msa
  labels:
    app: bank-of-msa
